--- a/frontend/src/app/features/onboarding/pages/mensaje2/mensaje2.component.html
+++ b/frontend/src/app/features/onboarding/pages/mensaje2/mensaje2.component.html
@@ -8,5 +8,5 @@
   styleClass="w-full mt-5"
   label="Continuar"
   [raised]="true"
-  (onClick)="continueToDashboard()"
+  (click)="continueToDashboard()"
 />
