--- a/frontend/src/app/features/onboarding/layouts/onboarding-layout/onboarding-layout.component.html
+++ b/frontend/src/app/features/onboarding/layouts/onboarding-layout/onboarding-layout.component.html
@@ -1,5 +1,5 @@
-<div class="h-screen max-w-screen flex items-center justify-center">
-  <div class="container mx-auto my-auto md:max-w-md">
+<div class="min-h-screen max-w-screen flex items-center justify-center pt-10 pb-20">
+  <div class="container mx-auto my-auto md:max-w-4xl">
     <div class="card mx-5 space-y-5">
       <app-card-header [showDismissable]="false" />
       <router-outlet />
