--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 .card {
-  @apply dark:bg-[#9ed2c5] shadow-md bg-[#9ed2c5] p-6 rounded-lg text-white dark:bg-gray-800 dark:text-white;
+  @apply dark:bg-[#9ed2c5] shadow-md bg-[#618E83] p-6 rounded-lg text-white dark:bg-gray-800 dark:text-white;
 }
 
 .card-secondary {
